--- a/two.html
+++ b/two.html
@@ -8,13 +8,12 @@
 <body>
     <a href="index.html">ขอบคุณทุกคนที่เเวะมาชม พอร์ตฟอริโอชิ้นเล็กๆชิ้นนี้นะครับ หวังว่าเราจะรู้จักกันมากขึ้นกับพอร์ตฟอริโอชิ้นนี้นะครับ
          <br><br>
-        "social media"
+    </a>
+    "social media"
         <br>
-        <i class="fa-brands fa-facebook"></i>  https://www.facebook.com/profile.php?id=100007947031546&mibextid=ZbWKwL
-        <i class="fa-brands fa-instagram"></i> https://instagram.com/p_183cm?igshid=OGQ5ZDc2ODk2ZA==
+        <i class="fa-brands fa-facebook"></i> <link rel="stylesheet" href="https://www.facebook.com/profile.php?id=100007947031546&mibextid=ZbWKwL"> 
+        <i class="fa-brands fa-instagram"></i> <link rel="stylesheet" href="https://instagram.com/p_183cm?igshid=OGQ5ZDc2ODk2ZA==">
         <br><br>
         ยินดีที่ได้รู้จักนะครับ Nice To Meet You
-    </a>
-    
 </body>
 </html>
